<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/svExpenseCategory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@+id/expense_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/rvMain">

        <RadioGroup
            android:id="@+id/rgExpenseCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <RadioButton
            android:id="@+id/rbFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/rbHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <RadioButton
            android:id="@+id/rbTransportation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportation" />

        <RadioButton
            android:id="@+id/rbHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household" />

        <RadioButton
            android:id="@+id/rbTourism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourism" />

        <RadioButton
            android:id="@+id/rbEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment" />

        <RadioButton
            android:id="@+id/rbEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <RadioButton
            android:id="@+id/rbClothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothing" />

        <RadioButton
            android:id="@+id/rbElse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />

        </RadioGroup>
    </ScrollView>

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toEndOf="@+id/svExpenseCategory"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/rvMain"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expense_amount"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/rvMain"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        tools:listitem="@layout/item_list" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvMain">

        <Button
            android:id="@+id/Bnset_max_valueFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_max_value" />

        <Button
            android:id="@+id/BndiagramFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagram" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>