<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11">

    <LinearLayout
        android:id="@+id/foodvalContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etFood"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/healthvalContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etHealth"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transportationvalContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportation_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etTransportation"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/householdContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etHousehold"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tourismContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourism_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etTourism"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entertainmentContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etEntertainment"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/educationContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etEducation"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clothingContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothing_max"
            android:textAllCaps="true"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etClothing"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_max"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etOther"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/saveAllButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BnSaveAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_values" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BnitemFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_list" />

        <Button
            android:id="@+id/BndiagramFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagram" />

    </LinearLayout>

</LinearLayout>


