<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="40">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartFinances"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="39" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/Bnset_max_valueFR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_max_value" />

        <Button
            android:id="@+id/BnitemFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_list" />

        <Button
            android:id="@+id/BnchangeChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_chart" />

    </LinearLayout>

</LinearLayout>